style: now pull profile pictures based on url in `UserInfo` fix: style overflowing text of `OrderHistoryComponent` fix: only emit changes from `CacheService` if there is a subscriber

--- a/src/app/components/account-info/_account-info.theme.scss
+++ b/src/app/components/account-info/_account-info.theme.scss
@@ -1,8 +1,3 @@
 @import '~@angular/material/_theming.scss';
 
-@mixin ms-account-info-theme($theme) {
-
-  $primary: map-get($theme, primary);
-
-  .ms-account-info-wrapper {}
-}
+@mixin ms-account-info-theme($theme) {}
