--- a/src/app/components/order-history/order-history.component.scss
+++ b/src/app/components/order-history/order-history.component.scss
@@ -21,6 +21,7 @@
 
       .state-color-bar {
         padding: 0 0.5em;
+        margin-right: 0.5em;
       }
 
       .row-info {
